@@ -1,8 +1,11 @@
 package com.previred.web.services;
 
 import com.previred.web.dtos.CompanyDTO;
+import com.previred.web.dtos.WorkerDTO;
 import com.previred.web.models.Company;
+import com.previred.web.models.Worker;
 import com.previred.web.repositories.CompanyRepository;
+import com.previred.web.repositories.WorkerRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -10,15 +13,16 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 
 @Service
 public class CompanyServiceImpl implements CompanyService {
 
     private final CompanyRepository companyRepository;
+    private final WorkerRepository workerRepository;
 
-    public CompanyServiceImpl(CompanyRepository companyRepository) {
+    public CompanyServiceImpl(CompanyRepository companyRepository, WorkerRepository workerRepository) {
         this.companyRepository = companyRepository;
+        this.workerRepository = workerRepository;
     }
 
     @Override
@@ -42,30 +46,31 @@ public class CompanyServiceImpl implements CompanyService {
     }
 
     @Override
-    public List<CompanyDTO> getCompanies() {
-        return companyRepository.findAll().stream().map(CompanyDTO::new).collect(toList());
+    public ResponseEntity<List<CompanyDTO>> getCompanies() {
+        List<CompanyDTO> companies = companyRepository.findAll().stream().map(CompanyDTO::new).toList();
+        return new ResponseEntity<>(companies,HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<?> getCompany(String rut) {
 
-        if(companyRepository.existsByRut(rut)){
+        if (companyRepository.existsByRut(rut)) {
             Company company = companyRepository.findCompanyByRut(rut);
             CompanyDTO companyDTO = companyRepository.findById(company.getId()).map(CompanyDTO::new).orElse(null);
             return new ResponseEntity<>(companyDTO, HttpStatus.OK);
-        }
-        else {
+
+        } else {
             return new ResponseEntity<>("Company does not exist", HttpStatus.NOT_FOUND);
         }
     }
 
     @Override
-    public ResponseEntity<Object> updateCompany(String rut, Company companyUpdated) {
+    public ResponseEntity<Object> updateCompany(String rut, CompanyDTO companyDTO) {
         Company company = companyRepository.findCompanyByRut(rut);
 
         if(company != null){
-            company.setRut(companyUpdated.getRut());
-            company.setRazonSocial(companyUpdated.getRazonSocial());
+            company.setRut(companyDTO.getRut());
+            company.setCompanyName(companyDTO.getCompanyName());
             companyRepository.save(company);
             return new ResponseEntity<>("Company updated! " + company, HttpStatus.OK);
 
@@ -78,9 +83,23 @@ public class CompanyServiceImpl implements CompanyService {
     @Override
     public ResponseEntity<Object> deleteCompany(String rut) {
         Company company = companyRepository.findCompanyByRut(rut);
-        if(company != null){
+        if (company != null) {
             companyRepository.deleteById(company.getId());
             return new ResponseEntity<>("Company deleted", HttpStatus.OK);
+
+        } else {
+            return new ResponseEntity<>("Company does not exist", HttpStatus.NOT_FOUND);
+        }
+    }
+
+    @Override
+    public ResponseEntity<Object> addWorker(String rut, WorkerDTO workerDTO) {
+        Company company = companyRepository.findCompanyByRut(rut);
+        if (company != null) {
+            Worker worker = new Worker(workerDTO.getRut(), workerDTO.getFirstName(), workerDTO.getLastName(), workerDTO.getSecondLastName(), workerDTO.getAddress());
+            worker.setCompany(company);
+            workerRepository.save(worker);
+            return new ResponseEntity<>("Worker added to " + company, HttpStatus.OK);
         } else {
             return new ResponseEntity<>("Company does not exist", HttpStatus.NOT_FOUND);
         }
